--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pandora Web Client For NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm install && node index.js
   },
   "author": "Mitchell Urgero",
   "license": "ISC",
